# SmartInboxAi

./: .env.example  AGENTS.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker-publish.yml
docs/architecture/: architecture.md
docs/requirements/: llm_logic.md  notification_webhook.md  ocr_pipeline.md  telegram_bot.md
src/: __init__.py  config.py  file_ops.py  llm.py  main.py  models.py  notifier.py  ocr.py  pipeline.py  telegram_bot.py  watcher.py  webhook.py
tests/: __init__.py  conftest.py  test_config.py  test_file_ops.py  test_llm.py  test_models.py  test_notifier.py  test_ocr.py  test_pipeline.py  test_telegram_bot.py  test_webhook.py
