[project]
name = "smartinboxai"
version = "0.1.0"
description = "Automatisierte Dokumentenverwaltung (DMS) für NAS mit OCR, KI-Analyse und Telegram-Bot."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "watchfiles>=1.0.0",
    "pypdf>=4.0.0",
    "pdf2image>=1.17.0",
    "litellm>=1.50.0",
    "python-telegram-bot>=21.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
